Minimal repro case for compile error C2280

Bug: 770771
Change-Id: Id62be9d8cd37da412833b5512b4e06cd4a267f2a